<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <repositories>
        <repository>
            <id>qa-regression</id>
            <url>
                https://pkgs.dev.azure.com/officedepoteu/0f6c494d-fd72-484b-83d1-f613b53448a4/_packaging/qa-regression/maven/v1
            </url>
            <releases>
                <enabled>true</enabled>
            </releases>
            <snapshots>
                <enabled>true</enabled>
            </snapshots>
        </repository>
    </repositories>
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.officedepot</groupId>
    <artifactId>od-qa-automation</artifactId>
    <version>1.0</version>
    <name>OD QA Automation</name>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
        <serenity.version>2.4.34</serenity.version>
        <serenity.cucumber6.version>2.4.34</serenity.cucumber6.version>
        <cucumber.version>6.10.4</cucumber.version>
        <open.csv.version>4.4</open.csv.version>
        <log4j.version>2.13.3</log4j.version>
        <slf4j.version>2.0.0-alpha0</slf4j.version>
        <jsch.version>0.1.54</jsch.version>
        <java.faker.version>0.13</java.faker.version>
        <jdk.source.version>1.8</jdk.source.version>
        <glue>stepdefs</glue>
        <tags></tags>
        <jdk.target.version>1.8</jdk.target.version>
        <webdriver.provided.mydriver>drivers.LocalChromeDriver</webdriver.provided.mydriver>
        <cucumber.options></cucumber.options>
        <store.url></store.url>
        <webdriver.perf.driver></webdriver.perf.driver>
        <browser>chrome</browser>
        <parallelScheme>SCENARIO</parallelScheme>
        <environment></environment>
        <baseStore></baseStore>
        <cucumberRunnerTemplate></cucumberRunnerTemplate>
        <maven.failsafe.plugin.version>3.0.0-M5</maven.failsafe.plugin.version>
        <maven.surefire.plugin.version>3.0.0-M5</maven.surefire.plugin.version>
        <cucable.plugin.version>1.9.0</cucable.plugin.version>
        <runners>**/*IT.java</runners>
        <featuresDirectory>${project.basedir}/src/test/resources/features/</featuresDirectory>
        <failsafe.rerunFailingTestsCount>1</failsafe.rerunFailingTestsCount>
    </properties>

    <dependencies>
        <dependency>
            <groupId>net.serenity-bdd</groupId>
            <artifactId>serenity-core</artifactId>
            <version>${serenity.version}</version>
        </dependency>
        <dependency>
            <groupId>net.serenity-bdd</groupId>
            <artifactId>serenity-rest-assured</artifactId>
            <version>${serenity.version}</version>
        </dependency>

        <dependency>
            <groupId>com.opencsv</groupId>
            <artifactId>opencsv</artifactId>
            <version>${open.csv.version}</version>
        </dependency>
        <dependency>
            <groupId>com.github.javafaker</groupId>
            <artifactId>javafaker</artifactId>
            <version>${java.faker.version}</version>
        </dependency>
        <dependency>
            <groupId>org.apache.httpcomponents</groupId>
            <artifactId>httpclient</artifactId>
            <version>4.5.13</version>
        </dependency>
        <dependency>
            <groupId>net.serenity-bdd</groupId>
            <artifactId>serenity-cucumber6</artifactId>
            <version>${serenity.cucumber6.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>net.serenity-bdd</groupId>
            <artifactId>serenity-model</artifactId>
            <version>${serenity.version}</version>
        </dependency>
        <dependency>
            <groupId>net.serenity-bdd</groupId>
            <artifactId>serenity-junit</artifactId>
            <version>${serenity.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>io.cucumber</groupId>
            <artifactId>cucumber-junit</artifactId>
            <version>${cucumber.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>net.sourceforge.htmlunit</groupId>
            <artifactId>htmlunit</artifactId>
            <version>2.9</version>
        </dependency>
        <dependency>
            <groupId>io.cucumber</groupId>
            <artifactId>cucumber-core</artifactId>
            <version>${cucumber.version}</version>
            <exclusions>
                <exclusion>
                    <groupId>org.apiguardian</groupId>
                    <artifactId>apiguardian-api</artifactId>
                </exclusion>
            </exclusions>
        </dependency>
        <dependency>
            <groupId>io.cucumber</groupId>
            <artifactId>cucumber-java</artifactId>
            <version>${cucumber.version}</version>
            <exclusions>
                <exclusion>
                    <groupId>org.apiguardian</groupId>
                    <artifactId>apiguardian-api</artifactId>
                </exclusion>
            </exclusions>
        </dependency>
        <dependency>
            <groupId>net.serenity-bdd</groupId>
            <artifactId>serenity-jira-plugin</artifactId>
            <version>1.12.0</version>
        </dependency>
        <dependency>
            <groupId>com.googlecode.lambdaj</groupId>
            <artifactId>lambdaj</artifactId>
            <version>2.3.3</version>
        </dependency>

        <!-- LOGGING DEPENDENCIES FOR LOG4J 2 -->
        <dependency>
            <groupId>org.apache.logging.log4j</groupId>
            <artifactId>log4j-1.2-api</artifactId>
            <version>${log4j.version}</version>
        </dependency>
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-simple</artifactId>
            <version>${slf4j.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.apache.logging.log4j</groupId>
            <artifactId>log4j-api</artifactId>
            <version>${log4j.version}</version>
        </dependency>
        <dependency>
            <groupId>org.apache.logging.log4j</groupId>
            <artifactId>log4j-core</artifactId>
            <version>${log4j.version}</version>
        </dependency>
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-api</artifactId>
            <version>${slf4j.version}</version>
        </dependency>
        <dependency>
            <groupId>net.serenity-bdd</groupId>
            <artifactId>serenity-ensure</artifactId>
            <version>${serenity.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>4.13.1</version>
            <exclusions>
                <exclusion>
                    <groupId>org.hamcrest</groupId>
                    <artifactId>hamcrest-core</artifactId>
                </exclusion>
            </exclusions>
        </dependency>
        <dependency>
            <groupId>ch.qos.logback</groupId>
            <artifactId>logback-classic</artifactId>
            <version>1.0.13</version>
        </dependency>
        <dependency>
            <groupId>org.assertj</groupId>
            <artifactId>assertj-core</artifactId>
            <version>3.6.2</version>
            <scope>test</scope>
        </dependency>

    </dependencies>
    <reporting>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-report-plugin</artifactId>
                <version>3.0.0-M4</version>
            </plugin>
        </plugins>
    </reporting>
    <build>

        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.8.1</version>
                <configuration>
                    <source>1.8</source>
                    <target>1.8</target>
                </configuration>
            </plugin>


            <!--CUCUMBER-JVM-PARALLEL-PLUGIN-->

            <!--UNCOMMENT THE BELOW PLUGIN FOR LOCAL TEST RUNS-->

<!--                                                <plugin>-->
<!--                                                <groupId>com.github.temyers</groupId>-->
<!--                                                <artifactId>cucumber-jvm-parallel-plugin</artifactId>-->
<!--                                                <version>5.0.0</version>-->
<!--                                                <executions>-->
<!--                                                <execution>-->
<!--                                                <id>generateRunners</id>-->
<!--                                                <phase>generate-test-sources</phase>-->
<!--                                                <goals>-->
<!--                                                <goal>generateRunners</goal>-->
<!--                                                </goals>-->
<!--                                                <configuration>-->
<!--                                                <glue>-->
<!--                                                <package>stepdefs</package>-->
<!--                                                </glue>-->
<!--                                                <parallelScheme>FEATURE</parallelScheme>-->
<!--                                                            <outputDirectory>${project.build.directory}/generated-test-sources/cucumber-->
<!--                                                </outputDirectory>-->
<!--                                                <featuresDirectory>${featuresDirectory}</featuresDirectory>-->
<!--                                                            <cucumberOutputDir>target/cucumber-parallel</cucumberOutputDir>-->
<!--                                                <strict>true</strict>-->
<!--                                                            <customVmTemplate>/src/test/resources/cucumberTemplates/cucumber-jvm-runner.vm</customVmTemplate>-->
<!--                                                <monochrome>true</monochrome>-->
<!--                                                <useTestNG>false</useTestNG>-->
<!--                                                <useTestNG>false</useTestNG>-->
<!--                                                <namingScheme>feature-title</namingScheme>-->
<!--                                                &lt;!&ndash; One of [SCENARIO, FEATURE]. SCENARIO generates one runner per scenario.  FEATURE generates a runner per feature. &ndash;&gt;-->
<!--                                                &lt;!&ndash;<parallelScheme>${parallelScheme}</parallelScheme>&ndash;&gt;-->
<!--                                                </configuration>-->
<!--                                                </execution>-->
<!--                                                </executions>-->
<!--                                                </plugin>-->

            <!--UNCOMMENT THE ABOVE PLUGIN FOR LOCAL TEST RUNS-->


            <!--CUCABLE PLUGIN-->

            <!--DISABLE THE BELOW PLUGIN FOR LOCAL TEST RUNS IF NEEDED-->

            <plugin>
                <groupId>com.trivago.rta</groupId>
                <artifactId>cucable-plugin</artifactId>
                <version>${cucable.plugin.version}</version>
                <executions>
                    <execution>
                        <id>generateRunners</id>
                        <phase>generate-test-sources</phase>
                        <goals>
                            <goal>parallel</goal>
                        </goals>
                        <configuration>
                            <sourceRunnerTemplateFile>
                                ${project.basedir}/src/test/resources/cucumberTemplates/${cucumberRunnerTemplate}
                            </sourceRunnerTemplateFile>
                            <!--<parallelizationMode>features</parallelizationMode>-->
                            <sourceFeatures>${featuresDirectory}</sourceFeatures>
                            <generatedFeatureDirectory>${project.basedir}/src/test/resources/parallel/features
                            </generatedFeatureDirectory>
                            <includeScenarioTags>${tags}</includeScenarioTags>
                            <generatedRunnerDirectory>${project.basedir}/src/test/java/parallel/runners
                            </generatedRunnerDirectory>
                            <numberOfTestRuns>1</numberOfTestRuns>
                            <logLevel>off</logLevel>
                        </configuration>
                    </execution>
                </executions>
            </plugin>

            <!--DISABLE THE ABOVE PLUGIN FOR LOCAL TEST RUNS IF NEEDED-->

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>${maven.surefire.plugin.version}</version>
                <executions>
                    <execution>
                        <id>create-test-users</id>
                        <phase>test</phase>
                    </execution>
                </executions>
                <configuration>
                    <includes>
                        <scope>test</scope>
                        <include>**/*IT.java</include>
                        <include>testSetup/CheckSite.java</include>
                    </includes>

                    <parallel>all</parallel>
                    <reuseForks>true</reuseForks>
                    <forkCount></forkCount>
                    <useUnlimitedThreads>true</useUnlimitedThreads>
                    <systemPropertyVariables>
                        <store.url>${store.url}</store.url>
                        <management.url>${management.url}</management.url>
                        <testFailureIgnore>true</testFailureIgnore>
                        <browser>${browser}</browser>
                        <environment>${environment}</environment>
                        <webdriver.provided.mydriver>${webdriver.provided.mydriver}</webdriver.provided.mydriver>
                    </systemPropertyVariables>
                    <skip>${skipUnit}</skip>
                    <useSystemClassLoader>false</useSystemClassLoader>
                    <argLine>-Xmx1024m -XX:MaxPermSize=1024m</argLine>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-failsafe-plugin</artifactId>
                <version>${maven.failsafe.plugin.version}</version>
                <executions>
                    <execution>
                        <goals>
                            <goal>integration-test</goal>
                            <goal>verify</goal>
                        </goals>
                    </execution>
                </executions>
                <configuration>
                    <includes>
                        <include>${runners}</include>
                    </includes>
                    <parallel>all</parallel>
                    <forkCount></forkCount>
                    <argLine>-Dfile.encoding=UTF-8</argLine>
                    <disableXmlReport>true</disableXmlReport>
                    <useUnlimitedThreads>true</useUnlimitedThreads>
                    <reuseForks>true</reuseForks>
                    <systemPropertyVariables>
                        <serenity.browser.width>1440</serenity.browser.width>
                        <serenity.browser.height>1440</serenity.browser.height>
                        <store.url>${store.url}</store.url>
                        <management.url>${management.url}</management.url>
                        <baseStore>${baseStore}</baseStore>
                        <browser>${browser}</browser>
                        <environment>${environment}</environment>
                        <cucumber.option>${cucumber.options}</cucumber.option>
                        <webdriver.provided.mydriver>${webdriver.provided.mydriver}</webdriver.provided.mydriver>
                        <failsafe.rerunFailingTestsCount>${failsafe.rerunFailingTestsCount}
                        </failsafe.rerunFailingTestsCount>
                    </systemPropertyVariables>
                    <skipTests>${skipIT}</skipTests>
                    <argLine>-Xms512m -Xmx512m -XX:+TieredCompilation -XX:TieredStopAtLevel=1</argLine>
                    <useSystemClassLoader>false</useSystemClassLoader>
                </configuration>
            </plugin>
            <plugin>
                <groupId>net.serenity-bdd.maven.plugins</groupId>
                <artifactId>serenity-maven-plugin</artifactId>
                <version>${serenity.version}</version>
                <configuration>
                    <reports>single-page-html</reports>
                </configuration>
                <dependencies>
                    <dependency>
                        <groupId>net.serenity-bdd</groupId>
                        <artifactId>serenity-core</artifactId>
                        <version>${serenity.version}</version>
                    </dependency>
                    <dependency>
                        <groupId>net.serenity-bdd</groupId>
                        <artifactId>serenity-single-page-report</artifactId>
                        <version>${serenity.version}</version>
                    </dependency>
                </dependencies>
                <executions>
                    <execution>
                        <id>serenity-reports</id>
                        <phase>post-integration-test</phase>
                        <goals>
                            <goal>aggregate</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>

    <profiles>
        <profile>
            <id>SEARCH</id>
            <properties>
                <tags>@search</tags>
                <environment>d6</environment>
                <browser>chrome</browser>
                <forkCount>5C</forkCount>
                <useUnlimitedThreads>true</useUnlimitedThreads>
                <cucumberRunnerTemplate>cucumber-runner-D1.template</cucumberRunnerTemplate>
            </properties>
        </profile>

        <profile>
            <id>LOCAL</id>
            <properties>
                <environment>local</environment>
                <cucumberRunnerTemplate>cucumber-runner-SMOKE.template</cucumberRunnerTemplate>
                <webdriver.provided.mydriver>drivers.SeleniumGridSerenityDriver</webdriver.provided.mydriver>
            </properties>
        </profile>
    </profiles>
</project>
